--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
+    <!-- font awesome -->
+
+    <script src="https://kit.fontawesome.com/62f9ec000b.js" crossorigin="anonymous"></script>
+
     <!-- Tailwind custom color -->
 
     <script>
@@ -49,20 +53,96 @@
 
         <!-- Banner section -->
 
-        <div class="hero min-h-screen bg-base-200">
-            <div class="hero-content flex-col lg:flex-row-reverse">
-              <img src="./images/banner.png" class="max-w-sm rounded-lg shadow-2xl" />
-              <div>
-                <h1 class="text-5xl font-bold">Box Office News!</h1>
-                <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                <button class="btn btn-primary">Get Started</button>
-              </div>
+        <div class="hero">
+
+            <div class="hero-content flex-col lg:flex-row">
+
+                <div>
+                    <h1 class="text-7xl font-extrabold">
+                        It's good <br>
+                        tea time at The <br>
+                        Tea House</h1>
+                    <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn btn-primary">Explore More</button>
+                </div>
+
+                <div>
+                    <img src="./images/banner.png" class="max-w-sm" />
+
+                    <!-- Ratings badge -->
+
+                    <div class=" -mt-16 flex items-center gap-3 bg-white drop-shadow-lg p-5 w-60">
+
+                        <i class="fa-solid fa-star text-4xl text-amber-400"></i>
+
+                        <div>
+                            <h3 class="text-3xl font-extrabold">5.00</h3>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-          </div>
+
+        </div>
 
     </header>
 
-    <main class="container mx-auto"></main>
+    <main class="container mx-auto">
+
+        <!-- featured section -->
+
+        <section class="text-center my-24">
+            <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even slightly believable. </p>
+
+
+            <!-- Featured tea card container -->
+
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+
+                <!-- first card -->
+                <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
+                    <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+
+                <!-- second card -->
+                <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
+                    <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+
+                <!-- third card -->
+                <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
+                    <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+
+                <!-- fourth card -->
+                <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
+                    <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
+                    <div class="card-body justify-center">
+                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                      <p>Creamer could be replaced by fresh milk</p>
+                    </div>
+                  </div>
+
+            </div>
+        </section>
+        
+    </main>
 
     <footer></footer>
 
