--- a/index.html
+++ b/index.html
@@ -141,6 +141,37 @@
 
             </div>
         </section>
+
+        <!-- great tea section -->
+
+        <section class="my-24 flex flex-col lg:flex-row gap-12">
+
+            <div class="grid gap-8 grid-cols-1 lg:grid-cols-2 flex-1">
+
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#FFE7E6] to-[#FFF3EB]"></div>
+
+                <div class="row-span-2 bg-[#FDF7E9] rounded-lg px-8 py-12 flex justify-center items-center">
+                    <img src="./images/fresh-1.png" alt="">
+                </div>
+
+                <div class="row-span-2 bg-[#EFF2EC] rounded-lg px-8 py-12 flex justify-center items-center">
+                    <img src="./images/fresh-2.png" alt="">
+                </div>
+
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#DDDDDD] to-[#FFFFFF]"></div>
+
+            </div>
+
+            <div class="space-y-5 flex-1">
+                <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+                <p>The meaning of gong cha is chinese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its customers  because of good words of mouth and unique customized service originated from Taiwan.</p>
+                <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+
+        </section>
         
     </main>
 
