--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
     </style>
 </head>
 
-<body class="font-manrope">
+<body class="font-manrope ">
 
     <header class="container mx-auto">
 
         <!-- Banner section -->
 
-        <div class="hero">
+        <div class="my-20">
 
-            <div class="hero-content flex-col lg:flex-row">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
                     <h1 class="text-7xl font-extrabold">
@@ -64,11 +64,14 @@
                         Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn text-white bg-gradient-to-r from-[#FF8737] to-[#FF0501] p-4">
+                        Explore More
+                        <img src="./images/arrow.png" alt="">
+                    </button>
                 </div>
 
                 <div>
-                    <img src="./images/banner.png" class="max-w-sm" />
+                    <img src="./images/banner.png" class="" />
 
                     <!-- Ratings badge -->
 
@@ -96,7 +99,9 @@
 
         <section class="text-center my-24">
             <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even slightly believable. </p>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomized words which don't
+                look even slightly believable. </p>
 
 
             <!-- Featured tea card container -->
@@ -107,37 +112,37 @@
                 <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
                     <figure><img src="./images/tea-1.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
 
                 <!-- second card -->
                 <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
                     <figure><img src="./images/tea-2.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
 
                 <!-- third card -->
                 <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
                     <figure><img src="./images/tea-3.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
 
                 <!-- fourth card -->
                 <div class="card p-8 bg-gradient-to-t from-[#FEFEFE] to-[#F4F4F4]">
                     <figure><img src="./images/tea-4.png" alt="Shoes" /></figure>
                     <div class="card-body justify-center">
-                      <h2 class="text-2xl font-extrabold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                        <h2 class="text-2xl font-extrabold">Milk Tea</h2>
+                        <p>Creamer could be replaced by fresh milk</p>
                     </div>
-                  </div>
+                </div>
 
             </div>
         </section>
@@ -162,9 +167,12 @@
 
             </div>
 
-            <div class="space-y-5 flex-1">
+            <div class="space-y-5 flex-1 p-5 lg:p-0">
                 <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
-                <p>The meaning of gong cha is chinese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its customers  because of good words of mouth and unique customized service originated from Taiwan.</p>
+                <p>The meaning of gong cha is chinese is to provide the best tea to emperor from all possessions . It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its customers because of good words of mouth and unique customized service originated
+                    from Taiwan.</p>
                 <h4 class="text-xl font-extrabold mt-8">Unique Taste</h4>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h4 class="text-xl font-extrabold mt-8">Premium Quality</h4>
@@ -172,11 +180,136 @@
             </div>
 
         </section>
-        
+
+        <!-- Super clients section -->
+
+        <section
+            class="my-24 rounded-xl bg-gradient-to-r from-[#FF8737] to-[#FF0501] px-16 py-24 flex flex-col lg:flex-row gap-12">
+            <div class="flex lg:pr-28 items-center ">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">
+                        Meet Our Super
+                        <br>
+                        Clients
+                    </h2>
+                    <p class="text-white">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomized words which don't look even slightly
+                        believable.
+                    </p>
+                    <button class="btn bg-white text-orange-500">Show All</button>
+                </div>
+            </div>
+
+            <!-- super clients review container -->
+
+            <div class="relative">
+
+                <!-- next review -->
+                <div class="relative z-10 mb-16  opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-7 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">
+                        Ilham Huda
+                    </h4>
+                    <p class="font-medium">Businessmen</p>
+                    <div class="flex justify-end">
+                        <img class="" src="./images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <!-- current review -->
+                <div class="absolute z-20 top-40 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white ">
+                    <img class="absolute -left-5 -top-7 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">
+                        Ilham Huda
+                    </h4>
+                    <p class="font-medium">Businessmen</p>
+                    <div class="flex justify-end">
+                        <img class="" src="./images/circles.png" alt="">
+                    </div>
+                </div>
+
+                <!-- previous review -->
+                <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -left-5 -top-7 border-4 border-white rounded-full bg-white"
+                        src="./images/client.png" alt="">
+                    <p>
+                        We are providing the best and suitable home insurance services for the people who are interested
+                        to treatment
+                    </p>
+                    <h4 class="font-bold mt-5">
+                        Ilham Huda
+                    </h4>
+                    <p class="font-medium">Businessmen</p>
+                    <div class="flex justify-end">
+                        <img class="" src="./images/circles.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+
     </main>
 
-    <footer></footer>
+    <footer  class="px-5 lg:px-48 py-10 bg-base-200 text-base-content">
 
-</body>
+        <div class="flex justify-between my-24">
+            <img src="./images/cup.png" alt="">
+            <p>
+                <span>Ready to get started?</span>
+                <button class="btn bg-gradient-to-r from-[#FF8737] to-[#FF0501] text-white">Get Started</button>
+            </p>
+        </div>
+
+        <div class="footer">
+            <div>
+                <span class="footer-title">Services</span>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </div>
+            <div>
+                <span class="footer-title">Company</span>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </div>
+            <div>
+                <span class="footer-title">Legal</span>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </div>
+            <div>
+                <span class="footer-title">Newsletter</span>
+                <div class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="relative">
+                        <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                        <button class="btn text-white absolute top-0 right-0 rounded-full bg-gradient-to-r from-[#FF8737] to-[#FF0501]"><i class="fa-solid fa-chevron-right "></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="mt-14 text-center">
+            <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+        </div>
 
 </html>
