--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                     </p>
                     <button class="btn text-white bg-gradient-to-r from-[#FF8737] to-[#FF0501] p-4">
                         Explore More
-                        <img src="./images/arrow.png" alt="">
+                        <img src="images/arrow.png" alt="">
                     </button>
                 </div>
 
                 <div>
-                    <img src="./images/banner.png" class="" />
+                    <img src="images/banner.png" class="" />
 
                     <!-- Ratings badge -->
 
